MMOCoreORB/Error Log
vagrant@ns510434:~/workspace/Core3/MMOCoreORB$ make build
/usr/local/bin/idlc -makefile src/Makefile.am -outdir autogen -cp ../MMOEngine/include -sd src anyadEclipse
compiling 'server/zone/managers/loot/LootManager.idl'
#done
cd utils/gtest-1.6.0 && make all
make[1]: Entering directory '/home/vagrant/workspace/Core3/MMOCoreORB/utils/gtest-1.6.0'
mkdir -p lib
make compile
make[2]: Entering directory '/home/vagrant/workspace/Core3/MMOCoreORB/utils/gtest-1.6.0'
g++   -I./include -I. -I../gmock-1.6.0/include -I../gmock-1.6.0 -c ./src/gtest-all.cc -o lib/gtest-all.o
g++   -I./include -I. -I../gmock-1.6.0/include -I../gmock-1.6.0 -c ../gmock-1.6.0/src/gmock-all.cc -o lib/gmock-all.o
make[2]: Leaving directory '/home/vagrant/workspace/Core3/MMOCoreORB/utils/gtest-1.6.0'
cd lib && ar -rv libgtest.a gtest-all.o gmock-all.o
r - gtest-all.o
r - gmock-all.o
make[1]: Leaving directory '/home/vagrant/workspace/Core3/MMOCoreORB/utils/gtest-1.6.0'
cd build/unix && make -j4 UNITTEST_DIRECTIVES="" #CC=clang CXX=clang++
make[1]: Entering directory '/home/vagrant/workspace/Core3/MMOCoreORB/build/unix'
make  all-recursive
make[2]: Entering directory '/home/vagrant/workspace/Core3/MMOCoreORB/build/unix'
Making all in src
make[3]: Entering directory '/home/vagrant/workspace/Core3/MMOCoreORB/build/unix/src'
depbase=`echo autogen/server/zone/managers/loot/LootManager.o | sed 's|[^/]*$|.deps/&|;s|\.o$||'`;\
g++ -DHAVE_CONFIG_H -I. -I../../../src -I..  -I/usr/local/include -I/usr/local/include/mysql -I../../../../MMOEngine/include -I../../../../MMOEngine/src -I../../../utils -I/usr/local/include -I/usr/include/mysql -I/usr/local/BerkeleyDB.5.3/include -I/usr/include/db5.3 -I../../../utils/gtest-1.6.0/include -I../../../utils/gmock-1.6.0/include -I../../../src/autogen    -ggdb -Wall -Wextra -Wno-unused -Wno-sign-compare -Wno-multichar -DDEFAULT_DYNAMIC_CAST -Wno-unused-parameter -Wno-overloaded-virtual -Wno-missing-declarations -Werror -std=c++11 -march=native -O0  -MT autogen/server/zone/managers/loot/LootManager.o -MD -MP -MF $depbase.Tpo -c -o autogen/server/zone/managers/loot/LootManager.o ../../../src/autogen/server/zone/managers/loot/LootManager.cpp &&\
mv -f $depbase.Tpo $depbase.Po
depbase=`echo autogen/server/zone/ZoneServer.o | sed 's|[^/]*$|.deps/&|;s|\.o$||'`;\
g++ -DHAVE_CONFIG_H -I. -I../../../src -I..  -I/usr/local/include -I/usr/local/include/mysql -I../../../../MMOEngine/include -I../../../../MMOEngine/src -I../../../utils -I/usr/local/include -I/usr/include/mysql -I/usr/local/BerkeleyDB.5.3/include -I/usr/include/db5.3 -I../../../utils/gtest-1.6.0/include -I../../../utils/gmock-1.6.0/include -I../../../src/autogen    -ggdb -Wall -Wextra -Wno-unused -Wno-sign-compare -Wno-multichar -DDEFAULT_DYNAMIC_CAST -Wno-unused-parameter -Wno-overloaded-virtual -Wno-missing-declarations -Werror -std=c++11 -march=native -O0  -MT autogen/server/zone/ZoneServer.o -MD -MP -MF $depbase.Tpo -c -o autogen/server/zone/ZoneServer.o ../../../src/autogen/server/zone/ZoneServer.cpp &&\
mv -f $depbase.Tpo $depbase.Po
depbase=`echo server/zone/objects/tangible/components/generic/ArtCrateMenuComponent.o | sed 's|[^/]*$|.deps/&|;s|\.o$||'`;\
g++ -DHAVE_CONFIG_H -I. -I../../../src -I..  -I/usr/local/include -I/usr/local/include/mysql -I../../../../MMOEngine/include -I../../../../MMOEngine/src -I../../../utils -I/usr/local/include -I/usr/include/mysql -I/usr/local/BerkeleyDB.5.3/include -I/usr/include/db5.3 -I../../../utils/gtest-1.6.0/include -I../../../utils/gmock-1.6.0/include -I../../../src/autogen    -ggdb -Wall -Wextra -Wno-unused -Wno-sign-compare -Wno-multichar -DDEFAULT_DYNAMIC_CAST -Wno-unused-parameter -Wno-overloaded-virtual -Wno-missing-declarations -Werror -std=c++11 -march=native -O0  -MT server/zone/objects/tangible/components/generic/ArtCrateMenuComponent.o -MD -MP -MF $depbase.Tpo -c -o server/zone/objects/tangible/components/generic/ArtCrateMenuComponent.o ../../../src/server/zone/objects/tangible/components/generic/ArtCrateMenuComponent.cpp &&\
mv -f $depbase.Tpo $depbase.Po
depbase=`echo server/zone/ZoneServerImplementation.o | sed 's|[^/]*$|.deps/&|;s|\.o$||'`;\
g++ -DHAVE_CONFIG_H -I. -I../../../src -I..  -I/usr/local/include -I/usr/local/include/mysql -I../../../../MMOEngine/include -I../../../../MMOEngine/src -I../../../utils -I/usr/local/include -I/usr/include/mysql -I/usr/local/BerkeleyDB.5.3/include -I/usr/include/db5.3 -I../../../utils/gtest-1.6.0/include -I../../../utils/gmock-1.6.0/include -I../../../src/autogen    -ggdb -Wall -Wextra -Wno-unused -Wno-sign-compare -Wno-multichar -DDEFAULT_DYNAMIC_CAST -Wno-unused-parameter -Wno-overloaded-virtual -Wno-missing-declarations -Werror -std=c++11 -march=native -O0  -MT server/zone/ZoneServerImplementation.o -MD -MP -MF $depbase.Tpo -c -o server/zone/ZoneServerImplementation.o ../../../src/server/zone/ZoneServerImplementation.cpp &&\
mv -f $depbase.Tpo $depbase.Po
depbase=`echo server/zone/managers/director/DirectorManager.o | sed 's|[^/]*$|.deps/&|;s|\.o$||'`;\
g++ -DHAVE_CONFIG_H -I. -I../../../src -I..  -I/usr/local/include -I/usr/local/include/mysql -I../../../../MMOEngine/include -I../../../../MMOEngine/src -I../../../utils -I/usr/local/include -I/usr/include/mysql -I/usr/local/BerkeleyDB.5.3/include -I/usr/include/db5.3 -I../../../utils/gtest-1.6.0/include -I../../../utils/gmock-1.6.0/include -I../../../src/autogen    -ggdb -Wall -Wextra -Wno-unused -Wno-sign-compare -Wno-multichar -DDEFAULT_DYNAMIC_CAST -Wno-unused-parameter -Wno-overloaded-virtual -Wno-missing-declarations -Werror -std=c++11 -march=native -O0  -MT server/zone/managers/director/DirectorManager.o -MD -MP -MF $depbase.Tpo -c -o server/zone/managers/director/DirectorManager.o ../../../src/server/zone/managers/director/DirectorManager.cpp &&\
mv -f $depbase.Tpo $depbase.Po
depbase=`echo server/zone/managers/loot/LootManagerImplementation.o | sed 's|[^/]*$|.deps/&|;s|\.o$||'`;\
g++ -DHAVE_CONFIG_H -I. -I../../../src -I..  -I/usr/local/include -I/usr/local/include/mysql -I../../../../MMOEngine/include -I../../../../MMOEngine/src -I../../../utils -I/usr/local/include -I/usr/include/mysql -I/usr/local/BerkeleyDB.5.3/include -I/usr/include/db5.3 -I../../../utils/gtest-1.6.0/include -I../../../utils/gmock-1.6.0/include -I../../../src/autogen    -ggdb -Wall -Wextra -Wno-unused -Wno-sign-compare -Wno-multichar -DDEFAULT_DYNAMIC_CAST -Wno-unused-parameter -Wno-overloaded-virtual -Wno-missing-declarations -Werror -std=c++11 -march=native -O0  -MT server/zone/managers/loot/LootManagerImplementation.o -MD -MP -MF $depbase.Tpo -c -o server/zone/managers/loot/LootManagerImplementation.o ../../../src/server/zone/managers/loot/LootManagerImplementation.cpp &&\
mv -f $depbase.Tpo $depbase.Po
../../../src/server/zone/managers/loot/LootManagerImplementation.cpp: In member function ‘server::zone::objects::tangible::TangibleObject* server::zone::managers::loot::LootManagerImplementation::createLootObject(LootItemTemplate*, int, bool)’:
../../../src/server/zone/managers/loot/LootManagerImplementation.cpp:480:38: error: incomplete type ‘server::zone::managers::stringid::StringIdManager’ used in nested name specifier
   StringIdManager* stringIdManager = StringIdManager::instance();
                                      ^
../../../src/server/zone/managers/loot/LootManagerImplementation.cpp:493:51: error: invalid use of incomplete type ‘class server::zone::managers::stringid::StringIdManager’
     prototype->setCustomObjectName(stringIdManager->getStringId(statName.hashCode()),false);
                                                   ^
In file included from ../../../src/server/zone/managers/crafting/schematicmap/SchematicMap.h:14:0,
                 from ../../../src/autogen/server/zone/managers/crafting/CraftingManager.h:109,
                 from ../../../src/server/zone/managers/loot/LootManagerImplementation.cpp:12:
../../../src/autogen/server/zone/ZoneServer.h:268:7: error: forward declaration of ‘class server::zone::managers::stringid::StringIdManager’
 class StringIdManager;
       ^
Makefile:8051: recipe for target 'server/zone/managers/loot/LootManagerImplementation.o' failed
make[3]: *** [server/zone/managers/loot/LootManagerImplementation.o] Error 1
make[3]: *** Waiting for unfinished jobs....
make[3]: Leaving directory '/home/vagrant/workspace/Core3/MMOCoreORB/build/unix/src'
Makefile:417: recipe for target 'all-recursive' failed
make[2]: *** [all-recursive] Error 1
make[2]: Leaving directory '/home/vagrant/workspace/Core3/MMOCoreORB/build/unix'
Makefile:357: recipe for target 'all' failed
make[1]: *** [all] Error 2
make[1]: Leaving directory '/home/vagrant/workspace/Core3/MMOCoreORB/build/unix'
Makefile:57: recipe for target 'build' failed
make: *** [build] Error 2
vagrant@ns510434:~/workspace/Core3/MMOCoreORB$ 
